add library structure

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
                 <nav class="menu">
                     <ul>
-                        <li id="active">
+                        <li class="active">
                             <a href="#">
                                 <i class="fa-solid fa-house"></i>
                                 <span>Home</span>
@@ -103,6 +103,45 @@
 
             <!-- contenuto principale -->
             <div class="library">
+
+                <!-- effettua l'upgrade -->
+                <div class="upgrade">
+                    <a href="#" class="button">EFFETTUA L'UPGRADE</a>
+                </div>
+
+                <!-- menu principale -->
+                <nav class="menu">
+                    <ul>
+                        <li class="active">
+                            <a href="#">IN EVIDENZA</a>
+                        </li>
+                        <li>
+                            <a href="#">PODCAST</a>
+                        </li>
+                        <li>
+                            <a href="#">CLASSIFICHE</a>
+                        </li>
+                        <li>
+                            <a href="#">GENERI E MOOD</a>
+                        </li>
+                        <li>
+                            <a href="#">NUOVE USCITE</a>
+                        </li>
+                        <li>
+                            <a href="#">SCOPRI</a>
+                        </li>
+                    </ul>
+                </nav>
+
+                <!-- recently played -->
+                <section></section>
+
+                <!-- creato per john doe -->
+                <section></section>
+
+                <!-- artisti più popolari -->
+                <section></section>
+
             </div>
 
         </div>
