--- a/index.html
+++ b/index.html
@@ -136,47 +136,47 @@
                 <!-- recently played -->
                 <section>
 
-                    <h3 class="section-title">Recently Played</h3>
+                    <h2>Recently Played</h2>
 
                     <div class="row">
 
                         <div class="col">
-                            <div class="cover">
+                            <div>
                                 <img src="img/metal_lifting.jpg" alt="Heavy Metal">
                             </div>
                             <h5 class="track">Heavy Metal</h5>
                             <span class="subtitle">Subtitle</span>
                         </div>
                         <div class="col">
-                            <div class="cover">
+                            <div>
                                 <img src="img/stranger.jpeg" alt="Stranger Things">
                             </div>
                             <h5 class="track">Stranger Things, Vol. 1(a Netflix Original Series Soundtrack)</h5>
                             <span class="subtitle">Kyle Dixon and Michael Stain</span>
                         </div>
                         <div class="col">
-                            <div class="cover">
+                            <div>
                                 <img src="img/aquietplace.jpeg" alt="A quiet place">
                             </div>
                             <h5 class="track">A quiet place</h5>
                             <span class="subtitle">Subtitle</span>
                         </div>
                         <div class="col">
-                            <div class="cover">
+                            <div>
                                 <img src="img/split.jpeg" alt="split">
                             </div>
                             <h5 class="track">Split</h5>
                             <span class="subtitle">Subtitle</span>
                         </div>
                         <div class="col">
-                            <div class="cover">
+                            <div>
                                 <img src="img/cure.jpeg" alt="cure">
                             </div>
                             <h5 class="track">A cure for wellness</h5>
                             <span class="subtitle">Subtitle</span>
                         </div>
                         <div class="col">
-                            <div class="cover">
+                            <div>
                                 <img src="img/sinister.jpeg" alt="sinister">
                             </div>
                             <h5 class="track">sinister</h5>
@@ -190,19 +190,19 @@
                 <!-- creato per john doe -->
                 <section>
 
-                    <h3 class="section-title">Creato per John Doe</h3>
+                    <h2>Creato per John Doe</h2>
                     <span class="subtitle">Più ascolti, più accurati saranno i suggerimenti</span>
 
                     <div class="row">
 
                         <div class="col">
-                            <div class="cover">
+                            <div>
                                 <img src="img/radar.jpeg" alt="release radar">
                             </div>
                             <h5 class="track">Release radar</h5>
                         </div>
                         <div class="col">
-                            <div class="cover">
+                            <div>
                                 <img src="img/mixdaily.jpeg" alt="daily mix">
                             </div>
                             <h5 class="track">Daily Mix 1</h5>
@@ -216,7 +216,7 @@
                 <!-- artisti più popolari -->
                 <section>
 
-                    <h3 class="section-title">Artisti più popolari</h3>
+                    <h2>Artisti più popolari</h2>
                     <span class="subtitle">Più ascolti, più accurati saranno i suggerimenti</span>
 
                     <div class="row">
@@ -245,12 +245,12 @@
 
             <div class="row">
 
-                <div class="col left">
+                <div class="col-25">
                     <div class="cover">
                         <img src="img/sinister.jpeg" alt="sinister">
                     </div>
                     
-                    <div id="inline">
+                    <div>
                         <h5 class="track">Sinister</h5>
                         <span class="subtitle">Brano Nome</span>
                     </div>
@@ -267,7 +267,7 @@
 
                 </div>
 
-                <div class="col big">
+                <div class="col-50">
 
                     <div class="up-tools">
                         <a class="icons" href="#">
@@ -295,9 +295,9 @@
 
                 </div>
 
-                <div class="col">
+                <div class="col-25">
 
-                    <div class="down-tools small">
+                    <div class="down-tools">
                         <a href="#">
                             <i class="fa-solid fa-list-ul"></i>
                         </a>
