add responsive rules xs

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             <div class="side-menu">
 
                 <div class="logo">
-                    <img src="img/logo.svg" alt="Spotify Logo">
+                    <img id="logo-big" src="img/logo.svg" alt="Spotify Logo">
+                    <img id="logo-small" src="img/logo-small.svg" alt="Spotify Small">
                 </div>
 
                 <nav class="menu">
@@ -48,7 +49,7 @@
                     </ul>
                 </nav>
 
-                <nav class="menu">
+                <nav class="menu playlist">
 
                     <h3 class="white">PLAYLIST</h3>
 
