add play button on hover

--- a/index.html
+++ b/index.html
@@ -143,43 +143,62 @@
                     <div class="row">
 
                         <div class="col">
-                            <div>
+                            <div class="cover">
                                 <img src="img/metal_lifting.jpg" alt="Heavy Metal">
+                                <div class="overlay">
+                                    <i class="fa-regular fa-circle-play"></i>  
+                                </div>
                             </div>
+                            
                             <h5 class="track">Heavy Metal</h5>
                             <span class="subtitle">Subtitle</span>
                         </div>
                         <div class="col">
-                            <div>
+                            <div class="cover">
                                 <img src="img/stranger.jpeg" alt="Stranger Things">
+                                <div class="overlay">
+                                    <i class="fa-regular fa-circle-play"></i>  
+                                </div>
                             </div>
                             <h5 class="track">Stranger Things, Vol. 1(a Netflix Original Series Soundtrack)</h5>
                             <span class="subtitle">Kyle Dixon and Michael Stain</span>
                         </div>
                         <div class="col">
-                            <div>
+                            <div class="cover">
                                 <img src="img/aquietplace.jpeg" alt="A quiet place">
+                                <div class="overlay">
+                                    <i class="fa-regular fa-circle-play"></i>  
+                                </div>
                             </div>
                             <h5 class="track">A quiet place</h5>
                             <span class="subtitle">Subtitle</span>
                         </div>
                         <div class="col">
-                            <div>
+                            <div class="cover">
                                 <img src="img/split.jpeg" alt="split">
+                                <div class="overlay">
+                                    <i class="fa-regular fa-circle-play"></i>  
+                                </div>
                             </div>
                             <h5 class="track">Split</h5>
                             <span class="subtitle">Subtitle</span>
                         </div>
                         <div class="col">
-                            <div>
+                            <div class="cover">
                                 <img src="img/cure.jpeg" alt="cure">
+                                <div class="overlay">
+                                    <i class="fa-regular fa-circle-play"></i>  
+                                </div>
                             </div>
                             <h5 class="track">A cure for wellness</h5>
                             <span class="subtitle">Subtitle</span>
                         </div>
                         <div class="col">
-                            <div>
+                            <div class="cover">
                                 <img src="img/sinister.jpeg" alt="sinister">
+                                <div class="overlay">
+                                    <i class="fa-regular fa-circle-play"></i>  
+                                </div>
                             </div>
                             <h5 class="track">sinister</h5>
                             <span class="subtitle">Subtitle</span>
@@ -198,14 +217,20 @@
                     <div class="row">
 
                         <div class="col">
-                            <div>
+                            <div class="cover">
                                 <img src="img/radar.jpeg" alt="release radar">
+                                <div class="overlay">
+                                    <i class="fa-regular fa-circle-play"></i>  
+                                </div>
                             </div>
                             <h5 class="track">Release radar</h5>
                         </div>
                         <div class="col">
-                            <div>
+                            <div class="cover">
                                 <img src="img/mixdaily.jpeg" alt="daily mix">
+                                <div class="overlay">
+                                    <i class="fa-regular fa-circle-play"></i>  
+                                </div>
                             </div>
                             <h5 class="track">Daily Mix 1</h5>
                         </div>
@@ -226,12 +251,18 @@
                         <div class="col">
                             <div class="cover circle">
                                 <img src="img/youg.jpeg" alt="lana del rey">
+                                <div class="overlay">
+                                    <i class="fa-regular fa-circle-play"></i>  
+                                </div>
                             </div>
                             <h5 class="track">Lana del Rey</h5>
                         </div>
                         <div class="col">
                             <div class="cover circle">
                                 <img src="img/einaudi.jpeg" alt="einaudi">
+                                <div class="overlay">
+                                    <i class="fa-regular fa-circle-play"></i>  
+                                </div>
                             </div>
                             <h5 class="track">Ludovico Einaudi</h5>
                         </div>
