add play-bar hover effect

--- a/index.html
+++ b/index.html
@@ -322,7 +322,11 @@
 
                     <div class="down-tools">
                         <span>0:25</span>
-                        <div class="grey-bar"></div>
+                        <div class="grey-bar">
+                            <div class="white-bar">
+                                <i class="fa-solid fa-circle"></i>
+                            </div>
+                        </div>
                         <span>4:35</span>
                     </div>
 
@@ -340,7 +344,11 @@
                         <a href="#">
                             <i class="fa-solid fa-volume-high"></i>
                         </a>
-                        <div class="grey-bar small"></div>
+                        <div class="grey-bar small">
+                            <div class="white-bar">
+                                <i class="fa-solid fa-circle"></i>
+                            </div>
+                        </div>
                         
                     </div>
 
